--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    background-color: rgb(163, 214, 211);
-}
+    background-color: rgb(149, 201, 201);
+    font-family: 'Space Mono', monospace;
+}   
 .container {
-    background-color: rgb(246, 248, 249);
-    margin-top: 15rem;
+    background-color: rgb(240, 242, 243);
+    margin-top: 8rem;
     border-radius: 5px;
 }
 
@@ -12,17 +13,42 @@ body {
 }
 .btn {
     width: 5rem;
+    color: white;
 
 }
 .results {
     background-color: rgb(65, 130, 119);
     height: 20rem;
     margin-top: 2.5rem;
+    
+    color: white;
+    border-bottom-left-radius:5px;
+}
+#amount,#total {
+    font-size: 2rem;
+    opacity: 0.6;
+    color:white;
+}
+.results p {
+    opacity: 0.5;
+}
+#custom {
+    border: 2px solid #0DCAF0;
+    width: 5rem;
+    height: 2.5rem;
     border-radius: 5px;
 }
-span {
-    font-size: 2rem;
+#people,#bill{
+    border-radius: 5px;
+    border: 2px solid rgba(120, 128, 127, 0.667);
+    width: 20rem;
+    text-align: center;
+    color: #767c7d;
 }
-h1 {
-    font-size: 1.5rem;
+#dollar,#person  {
+    position: relative;
+    left: 2rem;
+    bottom: 2px;
+    
 }
+
